crates/functions/src/tests/string_binary/snapshots/lower/query_already_lowercase.snap
---
source: crates/functions/src/tests/string_binary/lower.rs
description: "\"SELECT LOWER('hello world')\""
---
Ok(
    [
        "+----------------------------+",
        "| lower(Utf8(\"hello world\")) |",
        "+----------------------------+",
        "| hello world                |",
        "+----------------------------+",
    ],
)
