crates/functions/src/tests/string_binary/snapshots/lower/query_basic_string.snap
---
source: crates/functions/src/tests/string_binary/lower.rs
description: "\"SELECT LOWER('HELLO WORLD')\""
---
Ok(
    [
        "+----------------------------+",
        "| lower(Utf8(\"HELLO WORLD\")) |",
        "+----------------------------+",
        "| hello world                |",
        "+----------------------------+",
    ],
)
