crates/functions/src/tests/string_binary/snapshots/lower/query_empty_string.snap
---
source: crates/functions/src/tests/string_binary/lower.rs
description: "\"SELECT LOWER('')\""
---
Ok(
    [
        "+-----------------+",
        "| lower(Utf8(\"\")) |",
        "+-----------------+",
        "|                 |",
        "+-----------------+",
    ],
)
