crates/functions/src/tests/string_binary/snapshots/lower/query_mixed_case.snap
---
source: crates/functions/src/tests/string_binary/lower.rs
description: "\"SELECT LOWER('Hello World')\""
---
Ok(
    [
        "+----------------------------+",
        "| lower(Utf8(\"Hello World\")) |",
        "+----------------------------+",
        "| hello world                |",
        "+----------------------------+",
    ],
)
