crates/functions/src/tests/string_binary/snapshots/lower/query_non_string_types.snap
---
source: crates/functions/src/tests/string_binary/lower.rs
description: "\"SELECT \n        LOWER(123),\n        LOWER(123.45),\n        LOWER(CAST(123.46 AS DECIMAL(10,2)))\""
---
Ok(
    [
        "+-------------------+------------------------+------------------------+",
        "| lower(Int64(123)) | lower(Float64(123.45)) | lower(Float64(123.46)) |",
        "+-------------------+------------------------+------------------------+",
        "| 123               | 123.45                 | 123.46                 |",
        "+-------------------+------------------------+------------------------+",
    ],
)
