crates/functions/src/tests/string_binary/snapshots/lower/query_null_value.snap
---
source: crates/functions/src/tests/string_binary/lower.rs
description: "\"SELECT LOWER(NULL)\""
---
Ok(
    [
        "+-------------+",
        "| lower(NULL) |",
        "+-------------+",
        "|             |",
        "+-------------+",
    ],
)
