crates/functions/src/tests/string_binary/snapshots/lower/query_unicode_characters.snap
---
source: crates/functions/src/tests/string_binary/lower.rs
description: "\"SELECT \n        LOWER('CAFÉ'), \n        LOWER('Café'),\n        LOWER('你好世界'),\n        LOWER('ΕΛΛΗΝΙΚΆ'),\n        LOWER('Ελληνικά')\""
---
Ok(
    [
        "+---------------------+---------------------+-------------------------+-------------------------+-------------------------+",
        "| lower(Utf8(\"CAFÉ\")) | lower(Utf8(\"Café\")) | lower(Utf8(\"你好世界\")) | lower(Utf8(\"ΕΛΛΗΝΙΚΆ\")) | lower(Utf8(\"Ελληνικά\")) |",
        "+---------------------+---------------------+-------------------------+-------------------------+-------------------------+",
        "| café                | café                | 你好世界                | ελληνικά                | ελληνικά                |",
        "+---------------------+---------------------+-------------------------+-------------------------+-------------------------+",
    ],
)
